update-RPS-layout

--- a/index.html
+++ b/index.html
@@ -1,12 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RockPaperScissors</title>
-</head>
-<body>
-   <h1> Rock Paper Scissors Game</h1> 
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <link rel="stylesheet" href="index.css" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>RockPaperScissors</title>
+    </head>
+    <body>
+        <div class="parentContainer center">
+            <div class="container center">
+
+                <h1>Rock Paper Scissors Game</h1>
+
+                <h2>Choose your move below.</h2>
+
+                <div class="images">
+                    <div class="blue box">Player 1</div>
+                    <p id="results">And the winner is...</p>
+                    <div class="blue box">Computer</div>
+
+                </div>
+
+                <div class="buttons center">
+                    <button type="button">Rock</button>
+                    <button type="button">Paper</button>
+                    <button type="button">Scissors</button>
+                </div>
+
+            </div>
+        </div>
+    </body>
 </html>
